create stuffed bell peppers feast block

--- a/src/main/resources/assets/veggiesdelight/lang/en_us.json
+++ b/src/main/resources/assets/veggiesdelight/lang/en_us.json
@@ -39,7 +39,8 @@
   "item.veggiesdelight.mhadjeb": "Mhadjeb",
   "item.veggiesdelight.shakshouka": "Shakshouka",
   "item.veggiesdelight.smoked_bellpepper": "Smoked Bell Pepper",
-  "item.veggiesdelight.stuffed_bellpeppers": "Stuffed Bell Peppers",
+  "block.veggiesdelight.stuffed_bellpeppers_block": "Stuffed Bell Peppers",
+  "item.veggiesdelight.stuffed_bellpepper": "Stuffed Bell Pepper",
   "item.veggiesdelight.uncooked_mhadjeb": "Uncooked Mhadjeb",
   "block.veggiesdelight.vegan_pizza": "Vegan Pizza",
   "item.veggiesdelight.vegan_pizza_slice": "Vegan Pizza Slice",
