--- a/src/main/resources/assets/veggiesdelight/lang/es_es.json
+++ b/src/main/resources/assets/veggiesdelight/lang/es_es.json
@@ -38,7 +38,8 @@
   "item.veggiesdelight.mhadjeb": "Mhadjeb",
   "item.veggiesdelight.shakshouka": "Shakshouka",
   "item.veggiesdelight.smoked_bellpepper": "Pimiento Ahumado",
-  "item.veggiesdelight.stuffed_bellpeppers": "Pimientos Rellenos",
+  "block.veggiesdelight.stuffed_bellpeppers_block": "Pimientos Rellenos",
+  "item.veggiesdelight.stuffed_bellpepper": "Stuffed Bell Pepper",
   "item.veggiesdelight.uncooked_mhadjeb": "Mhadjeb Crudo",
   "block.veggiesdelight.vegan_pizza": "Pizza Vegana",
   "item.veggiesdelight.vegan_pizza_slice": "Porción de Pizza Vegana",
