--- a/src/main/resources/assets/veggiesdelight/lang/ja_jp.json
+++ b/src/main/resources/assets/veggiesdelight/lang/ja_jp.json
@@ -39,7 +39,8 @@
   "item.veggiesdelight.mhadjeb": "ハジェブ",
   "item.veggiesdelight.shakshouka": "シャクシュカ",
   "item.veggiesdelight.smoked_bellpepper": "パプリカの燻製",
-  "item.veggiesdelight.stuffed_bellpeppers": "パプリカのの肉詰め",
+  "block.veggiesdelight.stuffed_bellpeppers_block": "パプリカのの肉詰め",
+  "item.veggiesdelight.stuffed_bellpepper": "Stuffed Bell Pepper",
   "item.veggiesdelight.uncooked_mhadjeb": "未調理のハジェブ",
   "block.veggiesdelight.vegan_pizza": "ビーガンピザ",
   "item.veggiesdelight.vegan_pizza_slice": "一切れのビーガンピザ",
