--- a/src/main/resources/assets/veggiesdelight/lang/ru_ru.json
+++ b/src/main/resources/assets/veggiesdelight/lang/ru_ru.json
@@ -39,7 +39,8 @@
   "item.veggiesdelight.mhadjeb": "Мхаджеб",
   "item.veggiesdelight.shakshouka": "Шакшука",
   "item.veggiesdelight.smoked_bellpepper": "Копченый болгарский перец",
-  "item.veggiesdelight.stuffed_bellpeppers": "Фаршированный болгарский перец",
+  "block.veggiesdelight.stuffed_bellpeppers_block": "Фаршированный болгарский перец",
+  "item.veggiesdelight.stuffed_bellpepper": "Stuffed Bell Pepper",
   "item.veggiesdelight.uncooked_mhadjeb": "Сырой мхаджеб",
   "block.veggiesdelight.vegan_pizza": "Веганская пицца",
   "item.veggiesdelight.vegan_pizza_slice": "Кусочек веганской пиццы",
