--- a/src/main/resources/assets/veggiesdelight/lang/uk_ua.json
+++ b/src/main/resources/assets/veggiesdelight/lang/uk_ua.json
@@ -39,7 +39,8 @@
   "item.veggiesdelight.mhadjeb": "Мхаджеб",
   "item.veggiesdelight.shakshouka": "Шакшука",
   "item.veggiesdelight.smoked_bellpepper": "Копчений болгарський перець",
-  "item.veggiesdelight.stuffed_bellpeppers": "Фаршировані болгарські перці",
+  "block.veggiesdelight.stuffed_bellpeppers_block": "Фаршировані болгарські перці",
+  "item.veggiesdelight.stuffed_bellpepper": "Stuffed Bell Pepper",
   "item.veggiesdelight.uncooked_mhadjeb": "Сирий мхаджеб",
   "block.veggiesdelight.vegan_pizza": "Веганська піцца",
   "item.veggiesdelight.vegan_pizza_slice": "Шматок веганської піццы",
