--- a/src/main/resources/assets/veggiesdelight/lang/zh_cn.json
+++ b/src/main/resources/assets/veggiesdelight/lang/zh_cn.json
@@ -38,7 +38,8 @@
     "item.veggiesdelight.mhadjeb": "熟阿尔及利亚薄饼",
     "item.veggiesdelight.shakshouka": "北非蛋",
     "item.veggiesdelight.smoked_bellpepper": "烟熏甜椒",
-    "item.veggiesdelight.stuffed_bellpeppers": "填馅甜椒",
+    "block.veggiesdelight.stuffed_bellpeppers_block": "填馅甜椒",
+    "item.veggiesdelight.stuffed_bellpepper": "Stuffed Bell Pepper",
     "item.veggiesdelight.uncooked_mhadjeb": "生阿尔及利亚薄饼",
     "block.veggiesdelight.vegan_pizza": "纯素披萨",
     "item.veggiesdelight.vegan_pizza_slice": "纯素披萨切片",
