add zucchini quiche and slice (pie)

--- a/src/main/resources/assets/veggiesdelight/lang/en_us.json
+++ b/src/main/resources/assets/veggiesdelight/lang/en_us.json
@@ -90,6 +90,8 @@
   "item.veggiesdelight.zucchini_sandwich": "Zucchini Sandwich",
   "item.veggiesdelight.zucchini_slice": "Zucchini Slice",
   "item.veggiesdelight.stuffed_zucchinis": "Stuffed Zucchinis",
+  "block.veggiesdelight.zucchini_quiche": "Zucchini Quiche",
+  "item.veggiesdelight.zucchini_quiche_slice": "Zucchini Quiche Slice",
 
   "item.veggiesdelight.beetroot_brownie": "Beetroot Brownie",
   "block.veggiesdelight.beetroot_brownie_tray": "Beetroot Brownie Tray",
