add lasagna pan and slice (feast)

--- a/src/main/resources/assets/veggiesdelight/lang/en_us.json
+++ b/src/main/resources/assets/veggiesdelight/lang/en_us.json
@@ -100,6 +100,8 @@
   "item.veggiesdelight.carrot_juice": "Carrot Juice",
   "item.veggiesdelight.fish_and_chips": "Fish And Chips",
   "item.veggiesdelight.roasted_vegetables": "Roasted Vegetables",
+  "block.veggiesdelight.lasagna_pan": "Lasagna Pan",
+  "item.veggiesdelight.lasagna_slice": "Lasagna Slice",
 
 
   "veggiesdelight.advancement.root": "Veggies Delight",
