rename cauliflower patty to vegetarian patty to expand the ingredients

--- a/src/main/resources/assets/veggiesdelight/lang/en_us.json
+++ b/src/main/resources/assets/veggiesdelight/lang/en_us.json
@@ -53,9 +53,7 @@
   "item.veggiesdelight.cauliflower_burger": "Cauliflower Burger",
   "item.veggiesdelight.cauliflower_floret": "Cauliflower Floret",
   "item.veggiesdelight.cauliflower_kuku": "Cauliflower Kuku",
-  "item.veggiesdelight.cauliflower_patty": "Cauliflower Patty",
   "item.veggiesdelight.cauliflower_soup": "Cauliflower Soup",
-  "item.veggiesdelight.cooked_cauliflower_patty": "Cooked Cauliflower Patty",
   "item.veggiesdelight.roasted_cauliflower_floret": "Roasted Cauliflower Floret",
 
   "item.veggiesdelight.dandelion_and_eggs": "Dandelion Greens And Eggs",
@@ -70,6 +68,8 @@
   "item.veggiesdelight.garlic_rice_with_cauliflower": "Garlic Rice With Cauliflower",
   "item.veggiesdelight.garlic_stuffed_mushrooms": "Garlic Stuffed Mushrooms",
   "item.veggiesdelight.roasted_garlic_clove": "Roasted Garlic Clove",
+  "item.veggiesdelight.raw_vegetarian_patty": "Raw Vegetarian Patty",
+  "item.veggiesdelight.cooked_vegetarian_patty": "Cooked Vegetarian Patty",
 
   "item.veggiesdelight.baked_sweet_potato": "Baked Sweet Potato",
   "item.veggiesdelight.mashed_potatoes": "Mashed Potatoes",
