--- a/src/main/resources/assets/veggiesdelight/lang/en_us.json
+++ b/src/main/resources/assets/veggiesdelight/lang/en_us.json
@@ -48,6 +48,7 @@
   "item.veggiesdelight.broccoli_salad": "Broccoli Salad",
   "item.veggiesdelight.broccoli_soup": "Broccoli Soup",
   "item.veggiesdelight.pasta_with_broccoli": "Pasta With Broccoli",
+  "item.veggiesdelight.steak_and_broccoli": "Steak And Broccoli",
 
   "item.veggiesdelight.cauliflower_bread": "Cauliflower Bread",
   "item.veggiesdelight.cauliflower_floret": "Cauliflower Floret",
@@ -80,15 +81,19 @@
 
   "item.veggiesdelight.turnip_beef_stew": "Turnip Beef Stew",
   "item.veggiesdelight.turnip_cake": "Turnip Cake",
+  "item.veggiesdelight.turnip_mutton_skewer": "Turnip Mutton Skewer",
   "item.veggiesdelight.turnip_salad": "Turnip Salad",
   "item.veggiesdelight.turnip_water": "Turnip Water",
 
+  "item.veggiesdelight.coleslaw": "Coleslaw",
   "item.veggiesdelight.roasted_zucchini": "Roasted Zucchini",
+  "item.veggiesdelight.stuffed_zucchini_boat": "Stuffed Zucchini Boat",
+  "item.veggiesdelight.stuffed_zucchinis": "Stuffed Zucchinis",
   "item.veggiesdelight.zucchini_sandwich": "Zucchini Sandwich",
   "item.veggiesdelight.zucchini_slice": "Zucchini Slice",
-  "item.veggiesdelight.stuffed_zucchinis": "Stuffed Zucchinis",
   "block.veggiesdelight.zucchini_quiche": "Zucchini Quiche",
   "item.veggiesdelight.zucchini_quiche_slice": "Zucchini Quiche Slice",
+
 
   "item.veggiesdelight.beetroot_brownie": "Beetroot Brownie",
   "block.veggiesdelight.beetroot_brownie_tray": "Beetroot Brownie Tray",
@@ -102,7 +107,8 @@
   "item.veggiesdelight.raw_vegetarian_patty": "Raw Vegetarian Patty",
   "item.veggiesdelight.cooked_vegetarian_patty": "Cooked Vegetarian Patty",
   "item.veggiesdelight.vegetarian_burger": "Vegetarian Burger",
-
+  "item.veggiesdelight.rice_and_vegetables": "Rice And Vegetables",
+  "item.veggiesdelight.vegetables_wrap": "Vegetables Wrap",
 
   "veggiesdelight.advancement.root": "Veggies Delight",
   "veggiesdelight.advancement.root.desc": "Go get your veggies!",
