--- a/src/main/resources/assets/veggiesdelight/lang/es_es.json
+++ b/src/main/resources/assets/veggiesdelight/lang/es_es.json
@@ -24,6 +24,7 @@
   "block.veggiesdelight.turnip_crate": "Cajón de Nabos",
   "block.veggiesdelight.zucchini_crate": "Cajón de Calabacines",
 
+  "block.veggiesdelight.mature_dandelion": "Diente de León Maduro",
   "block.veggiesdelight.wild_bellpeppers": "Pimientos Silvestres",
   "block.veggiesdelight.wild_broccoli": "Brócoli Silvestre",
   "block.veggiesdelight.wild_cauliflowers": "Coliflores Silvestres",
@@ -31,14 +32,15 @@
   "block.veggiesdelight.wild_sweet_potatoes": "Batatas Silvestres",
   "block.veggiesdelight.wild_turnips": "Nabos Silvestres",
   "block.veggiesdelight.wild_zucchinis": "Calabacines Silvestres",
-  "block.veggiesdelight.mature_dandelion": "Diente de León Maduro",
+
 
   "item.veggiesdelight.cacciatore": "Cacciatore",
   "item.veggiesdelight.chicken_fajitas_wrap": "Wrap de Fajitas de Pollo",
   "item.veggiesdelight.mhadjeb": "Mhadjeb",
   "item.veggiesdelight.shakshouka": "Shakshouka",
   "item.veggiesdelight.smoked_bellpepper": "Pimiento Ahumado",
-  "item.veggiesdelight.stuffed_bellpeppers": "Pimientos Rellenos",
+  "block.veggiesdelight.stuffed_bellpeppers_block": "Pimientos Rellenos",
+  "item.veggiesdelight.stuffed_bellpepper": "Pimiento Relleno",
   "item.veggiesdelight.uncooked_mhadjeb": "Mhadjeb Crudo",
   "block.veggiesdelight.vegan_pizza": "Pizza Vegana",
   "item.veggiesdelight.vegan_pizza_slice": "Porción de Pizza Vegana",
@@ -46,15 +48,13 @@
   "item.veggiesdelight.broccoli_salad": "Ensalada de Brócoli",
   "item.veggiesdelight.broccoli_soup": "Sopa de Brócoli",
   "item.veggiesdelight.pasta_with_broccoli": "Pasta con Brócoli",
+  "item.veggiesdelight.steak_and_broccoli": "Steak And Broccoli",
 
   "item.veggiesdelight.cauliflower_bread": "Pan de Coliflor",
-  "item.veggiesdelight.cauliflower_burger": "Hamburguesa de Coliflor",
   "item.veggiesdelight.cauliflower_floret": "Ramillete de Coliflor",
   "item.veggiesdelight.cauliflower_kuku": "Kuku de Coliflor",
-  "item.veggiesdelight.cauliflower_patty": "Tortita de Coliflor",
   "item.veggiesdelight.cauliflower_soup": "Sopa de Coliflor",
-  "item.veggiesdelight.cooked_cauliflower_patty": "Tortita de Coliflor Cocida",
-  "item.veggiesdelight.roasted_cauliflower_floret": "Ramillete de Coliflor Frito",
+  "item.veggiesdelight.roasted_cauliflower_floret": "Roasted Cauliflower Floret",
 
   "item.veggiesdelight.dandelion_and_eggs": "Verduras de Diente de León con Huevos",
   "item.veggiesdelight.dandelion_juice": "Zumo de Diente de León",
@@ -81,21 +81,34 @@
 
   "item.veggiesdelight.turnip_beef_stew": "Estofado de Ternera con Nabo",
   "item.veggiesdelight.turnip_cake": "Pastel de Nabo",
+  "item.veggiesdelight.turnip_mutton_skewer": "Turnip Mutton Skewer",
   "item.veggiesdelight.turnip_salad": "Ensalada de Nabo",
   "item.veggiesdelight.turnip_water": "Agua de Nabo",
 
+  "item.veggiesdelight.coleslaw": "Coleslaw",
   "item.veggiesdelight.roasted_zucchini": "Calabacín Asado",
+  "item.veggiesdelight.stuffed_zucchini_boat": "Stuffed Zucchini Boat",
+  "item.veggiesdelight.stuffed_zucchinis": "Calabacines Rellenos",
   "item.veggiesdelight.zucchini_sandwich": "Sándwich de Calabacín",
   "item.veggiesdelight.zucchini_slice": "Rodaja de Calabacín",
-  "item.veggiesdelight.stuffed_zucchinis": "Calabacines Rellenos",
+  "block.veggiesdelight.zucchini_quiche": "Zucchini Quiche",
+  "item.veggiesdelight.zucchini_quiche_slice": "Zucchini Quiche Slice",
 
   "item.veggiesdelight.beetroot_brownie": "Brownie de Remolacha",
   "block.veggiesdelight.beetroot_brownie_tray": "Bandeja de Brownie de Remolacha",
   "block.veggiesdelight.carrot_cake": "Pastel de Zanahoria",
   "item.veggiesdelight.carrot_cake_slice": "Porción de Pastel de Zanahoria",
   "item.veggiesdelight.carrot_juice": "Zumo de Zanahoria",
+  "item.veggiesdelight.cooked_vegetarian_patty": "Cooked Vegetarian Patty",
   "item.veggiesdelight.fish_and_chips": "Pescado con Papas Fritas",
+  "block.veggiesdelight.lasagna_pan": "Lasagna Pan",
+  "item.veggiesdelight.lasagna_slice": "Lasagna Slice",
+  "item.veggiesdelight.raw_vegetarian_patty": "Raw Vegetarian Patty",
   "item.veggiesdelight.roasted_vegetables": "Verduras Asadas",
+  "item.veggiesdelight.rice_and_vegetables": "Rice And Vegetables",
+  "item.veggiesdelight.vegetables_wrap": "Vegetables Wrap",
+  "item.veggiesdelight.vegetarian_burger": "Vegetarian Burger",
+
 
   "veggiesdelight.advancement.root": "Delicia Vegetal",
   "veggiesdelight.advancement.root.desc": "¡Ve a por tus verduras!",
