--- a/src/main/resources/assets/veggiesdelight/lang/zh_cn.json
+++ b/src/main/resources/assets/veggiesdelight/lang/zh_cn.json
@@ -24,6 +24,7 @@
     "block.veggiesdelight.turnip_crate": "箱装芜菁",
     "block.veggiesdelight.zucchini_crate": "箱装西葫芦",
 
+    "block.veggiesdelight.mature_dandelion": "成熟蒲公英",
     "block.veggiesdelight.wild_bellpeppers": "野生甜椒丛",
     "block.veggiesdelight.wild_broccoli": "野生西兰花",
     "block.veggiesdelight.wild_cauliflowers": "野生花椰菜丛",
@@ -31,14 +32,15 @@
     "block.veggiesdelight.wild_sweet_potatoes": "野生红薯",
     "block.veggiesdelight.wild_turnips": "野生芜菁",
     "block.veggiesdelight.wild_zucchinis": "野生西葫芦",
-    "block.veggiesdelight.mature_dandelion": "成熟蒲公英",
+
 
     "item.veggiesdelight.cacciatore": "猎人炖菜",
     "item.veggiesdelight.chicken_fajitas_wrap": "墨西哥烤鸡肉卷",
     "item.veggiesdelight.mhadjeb": "熟阿尔及利亚薄饼",
     "item.veggiesdelight.shakshouka": "北非蛋",
     "item.veggiesdelight.smoked_bellpepper": "烟熏甜椒",
-    "item.veggiesdelight.stuffed_bellpeppers": "填馅甜椒",
+    "block.veggiesdelight.stuffed_bellpeppers_block": "填馅甜椒",
+    "item.veggiesdelight.stuffed_bellpepper": "Stuffed Bell Pepper",
     "item.veggiesdelight.uncooked_mhadjeb": "生阿尔及利亚薄饼",
     "block.veggiesdelight.vegan_pizza": "纯素披萨",
     "item.veggiesdelight.vegan_pizza_slice": "纯素披萨切片",
@@ -46,15 +48,13 @@
     "item.veggiesdelight.broccoli_salad": "西兰花沙拉",
     "item.veggiesdelight.broccoli_soup": "奶油西兰花浓汤",
     "item.veggiesdelight.pasta_with_broccoli": "西兰花意面",
+    "item.veggiesdelight.steak_and_broccoli": "Steak And Broccoli",
 
     "item.veggiesdelight.cauliflower_bread": "花椰菜面包",
-    "item.veggiesdelight.cauliflower_burger": "花椰菜汉堡",
     "item.veggiesdelight.cauliflower_floret": "花椰菜花球",
     "item.veggiesdelight.cauliflower_kuku": "波斯花椰菜蛋饼",
-    "item.veggiesdelight.cauliflower_patty": "生花椰菜蛋饼",
     "item.veggiesdelight.cauliflower_soup": "花椰菜奶油浓汤",
-    "item.veggiesdelight.cooked_cauliflower_patty": "熟花椰菜蛋饼",
-    "item.veggiesdelight.roasted_cauliflower_floret": "香烤花椰菜花球",
+    "item.veggiesdelight.roasted_cauliflower_floret": "Roasted Cauliflower Floret",
 
     "item.veggiesdelight.dandelion_and_eggs": "蒲公英叶煎蛋",
     "item.veggiesdelight.dandelion_juice": "蒲公英汁",
@@ -81,21 +81,34 @@
 
     "item.veggiesdelight.turnip_beef_stew": "芜菁炖牛肉",
     "item.veggiesdelight.turnip_cake": "芜菁糕",
+    "item.veggiesdelight.turnip_mutton_skewer": "Turnip Mutton Skewer",
     "item.veggiesdelight.turnip_salad": "芜菁沙拉",
     "item.veggiesdelight.turnip_water": "芜菁汁",
 
+    "item.veggiesdelight.coleslaw": "Coleslaw",
     "item.veggiesdelight.roasted_zucchini": "烤西葫芦",
+    "item.veggiesdelight.stuffed_zucchini_boat": "Stuffed Zucchini Boat",
+    "item.veggiesdelight.stuffed_zucchinis": "酿西葫芦",
     "item.veggiesdelight.zucchini_sandwich": "西葫芦三明治",
     "item.veggiesdelight.zucchini_slice": "西葫芦片",
-    "item.veggiesdelight.stuffed_zucchinis": "酿西葫芦",
+    "block.veggiesdelight.zucchini_quiche": "Zucchini Quiche",
+    "item.veggiesdelight.zucchini_quiche_slice": "Zucchini Quiche Slice",
 
     "item.veggiesdelight.beetroot_brownie": "甜菜根布朗尼切片",
     "block.veggiesdelight.beetroot_brownie_tray": "甜菜根布朗尼",
     "block.veggiesdelight.carrot_cake": "胡萝卜蛋糕",
     "item.veggiesdelight.carrot_cake_slice": "胡萝卜蛋糕切片",
     "item.veggiesdelight.carrot_juice": "胡萝卜汁",
+    "item.veggiesdelight.cooked_vegetarian_patty": "Cooked Vegetarian Patty",
     "item.veggiesdelight.fish_and_chips": "炸鱼薯条",
+    "block.veggiesdelight.lasagna_pan": "Lasagna Pan",
+    "item.veggiesdelight.lasagna_slice": "Lasagna Slice",
+    "item.veggiesdelight.raw_vegetarian_patty": "Raw Vegetarian Patty",
     "item.veggiesdelight.roasted_vegetables": "烤菜拼盘",
+    "item.veggiesdelight.rice_and_vegetables": "Rice And Vegetables",
+    "item.veggiesdelight.vegetables_wrap": "Vegetables Wrap",
+    "item.veggiesdelight.vegetarian_burger": "Vegetarian Burger",
+
 
     "veggiesdelight.advancement.root": "蔬菜乐事",
     "veggiesdelight.advancement.root.desc": "快去获取你的蔬菜吧！",
