Update ru_ru and fix kk_kz

--- a/src/main/resources/assets/veggiesdelight/lang/kk_kz.json
+++ b/src/main/resources/assets/veggiesdelight/lang/kk_kz.json
@@ -87,12 +87,12 @@
 
   "item.veggiesdelight.coleslaw": "Орамжапырақ салаты",
   "item.veggiesdelight.roasted_zucchini": "Қуырылған кәді",
-  "item.veggiesdelight.stuffed_zucchini_boat": "Толтырылған кәді қайығы",
+  "item.veggiesdelight.stuffed_zucchini_boat": "Толтырылған кәді",
   "item.veggiesdelight.stuffed_zucchinis": "Толтырылған кәділер",
   "item.veggiesdelight.zucchini_sandwich": "Кәді сэндвичі",
   "item.veggiesdelight.zucchini_slice": "Кәді тілімі",
-  "block.veggiesdelight.zucchini_quiche": "Кәді кішті",
-  "item.veggiesdelight.zucchini_quiche_slice": "Кәді кіш тілімі",
+  "block.veggiesdelight.zucchini_quiche": "Кәді киші",
+  "item.veggiesdelight.zucchini_quiche_slice": "Кәді киш тілімі",
 
   "item.veggiesdelight.beetroot_brownie": "Қызылша браунисі",
   "block.veggiesdelight.beetroot_brownie_tray": "Қызылша браунисі науасы",
