--- a/src/main/resources/assets/veggiesdelight/lang/ru_ru.json
+++ b/src/main/resources/assets/veggiesdelight/lang/ru_ru.json
@@ -40,7 +40,7 @@
   "item.veggiesdelight.shakshouka": "Шакшука",
   "item.veggiesdelight.smoked_bellpepper": "Копченый болгарский перец",
   "block.veggiesdelight.stuffed_bellpeppers_block": "Фаршированный болгарский перец",
-  "item.veggiesdelight.stuffed_bellpepper": "Stuffed Bell Pepper",
+  "item.veggiesdelight.stuffed_bellpepper": "Фаршированный болгарский перец",
   "item.veggiesdelight.uncooked_mhadjeb": "Сырой мхаджеб",
   "block.veggiesdelight.vegan_pizza": "Веганская пицца",
   "item.veggiesdelight.vegan_pizza_slice": "Кусочек веганской пиццы",
@@ -48,13 +48,13 @@
   "item.veggiesdelight.broccoli_salad": "Салат из брокколи",
   "item.veggiesdelight.broccoli_soup": "Суп из брокколи",
   "item.veggiesdelight.pasta_with_broccoli": "Паста с брокколи",
-  "item.veggiesdelight.steak_and_broccoli": "Steak And Broccoli",
+  "item.veggiesdelight.steak_and_broccoli": "Стейк и брокколи",
 
   "item.veggiesdelight.cauliflower_bread": "Хлеб из цветной капусты",
   "item.veggiesdelight.cauliflower_floret": "Соцветия цветной капусты",
-  "item.veggiesdelight.cauliflower_kuku": "???",
+  "item.veggiesdelight.cauliflower_kuku": "Куку из цветной капусты",
   "item.veggiesdelight.cauliflower_soup": "Суп из цветной капусты",
-  "item.veggiesdelight.roasted_cauliflower_floret": "Roasted Cauliflower Floret",
+  "item.veggiesdelight.roasted_cauliflower_floret": "Жареные соцветия цветной капусты",
 
   "item.veggiesdelight.dandelion_and_eggs": "Зелень одуванчика с яичницей",
   "item.veggiesdelight.dandelion_juice": "Сок из одуванчика",
@@ -81,33 +81,33 @@
 
   "item.veggiesdelight.turnip_beef_stew": "Тушёная говядина с репой",
   "item.veggiesdelight.turnip_cake": "Пирог с репой",
-  "item.veggiesdelight.turnip_mutton_skewer": "Turnip Mutton Skewer",
+  "item.veggiesdelight.turnip_mutton_skewer": "Шашлык из баранины с репой",
   "item.veggiesdelight.turnip_salad": "Салат из репы",
   "item.veggiesdelight.turnip_water": "Вода с репой",
 
-  "item.veggiesdelight.coleslaw": "Coleslaw",
+  "item.veggiesdelight.coleslaw": "Салат из капусты",
   "item.veggiesdelight.roasted_zucchini": "Жареный цукини",
-  "item.veggiesdelight.stuffed_zucchini_boat": "Stuffed Zucchini Boat",
+  "item.veggiesdelight.stuffed_zucchini_boat": "Фаршированные кабачки",
   "item.veggiesdelight.stuffed_zucchinis": "Фаршированый цукини",
   "item.veggiesdelight.zucchini_sandwich": "Сэндвич с цукини",
   "item.veggiesdelight.zucchini_slice": "Кусочек цукини",
-  "block.veggiesdelight.zucchini_quiche": "Zucchini Quiche",
-  "item.veggiesdelight.zucchini_quiche_slice": "Zucchini Quiche Slice",
+  "block.veggiesdelight.zucchini_quiche": "Киш с цукини",
+  "item.veggiesdelight.zucchini_quiche_slice": "Кусочек киша с цукини",
 
   "item.veggiesdelight.beetroot_brownie": "Свекольный брауни",
   "block.veggiesdelight.beetroot_brownie_tray": "Лоток с брауни из свёклы",
   "block.veggiesdelight.carrot_cake": "Морковный пирог",
   "item.veggiesdelight.carrot_cake_slice": "Кусочек морковного пирога",
   "item.veggiesdelight.carrot_juice": "Морковный сок",
-  "item.veggiesdelight.cooked_vegetarian_patty": "Cooked Vegetarian Patty",
+  "item.veggiesdelight.cooked_vegetarian_patty": "Жаренная вегетарианская котлета",
   "item.veggiesdelight.fish_and_chips": "Рыба с жареным картофелем",
-  "block.veggiesdelight.lasagna_pan": "Lasagna Pan",
-  "item.veggiesdelight.lasagna_slice": "Lasagna Slice",
-  "item.veggiesdelight.raw_vegetarian_patty": "Raw Vegetarian Patty",
+  "block.veggiesdelight.lasagna_pan": "Лазанья на сковороде",
+  "item.veggiesdelight.lasagna_slice": "Кусочек лазаньи",
+  "item.veggiesdelight.raw_vegetarian_patty": "Сырая вегетарианская котлета",
   "item.veggiesdelight.roasted_vegetables": "Запеченные овощи",
-  "item.veggiesdelight.rice_and_vegetables": "Rice And Vegetables",
-  "item.veggiesdelight.vegetables_wrap": "Vegetables Wrap",
-  "item.veggiesdelight.vegetarian_burger": "Vegetarian Burger",
+  "item.veggiesdelight.rice_and_vegetables": "Рис с овощами",
+  "item.veggiesdelight.vegetables_wrap": "Овощной ролл",
+  "item.veggiesdelight.vegetarian_burger": "Вегетарианский бургер",
 
 
   "veggiesdelight.advancement.root": "Овощной восторг",
